# web-builder

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
example/: colophon.md  index.md
example/about/: index.md
src/web_builder/: __init__.py  __main__.py  builder.py  file.py  markdown.py  metadata.py  node.py  scanner.py  site.py
src/web_builder/templates/default/: base.html  image.html  page.html
tests/: conftest.py  test_builder.py  test_metadata.py  test_node.py  test_scanner.py
