[project]
name = "web-builder"
version = "0.1.0"
description = "A simple static site generator written in Python"
readme = "README.md"
authors = [
    { name = "Brian Van Horne", email = "code@brianvanhorne.com" }
]
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.0",
    "markdown-it-py>=4.0.0",
    "pyexiv2>=2.14.0",
]

[project.scripts]
build = "web_builder.__main__:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0",
]
