[project]
name = "web-builder"
version = "0.1.0"
description = "A simple static site and image gallery generator."
readme = "README.md"
authors = [
    { name = "Brian Van Horne", email = "code@brianvanhorne.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
build = "web_builder:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"
